yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: "TCP"
    port: 8080  # service port
    targetPort: 80  # container port
  # nodePort: 30080
# type: NodePort
  type: LoadBalancer
