yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
spec:
  rules:
    - host: nginx-app-ingress.info  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app-service
                port:
                  number: 8080  # service port
